--- a/source/sass/base/typography.scss
+++ b/source/sass/base/typography.scss
@@ -1,41 +1,5 @@
-@font-face {
+body {
   font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Thin.woff) format(woff);
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Light.woff) format(woff);
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Regular.woff) format(woff);
+  font-size: 1.6rem;
   font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Semibold.woff) format(woff);
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Bold.woff) format(woff);
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "proximanova";
-  src: url(../fonts/ProximaNova-Black.woff) format(woff);
-  font-weight: 900;
-  font-style: normal;
 }
