Replaced Proxima font with Montserrat

--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -1,5 +1,10 @@
 :root {
+  --pink-dark: #6e1575;
   --pink: #e12457;
-  --pink-light: #fff5f8;
+  --pink-light: #bf3f8d;
+  --pink-lighter: #fff5f8;
   --grey: #4c4c4c;
+
+  //FONTS
+  --font: "montserrat";
 }
