--- a/source/sass/components/logo.scss
+++ b/source/sass/components/logo.scss
@@ -7,6 +7,7 @@
   width: 18rem;
 
   &__icon {
+    margin-right: 1.5rem;
     fill: var(--pink);
   }
 
@@ -24,5 +25,27 @@
     line-height: 2.1rem;
     color: #fff;
     font-weight: 100;
+  }
+}
+
+@media (max-width: 750px) {
+  .logo {
+    height: 3.9rem;
+    width: 14.5rem;
+
+    &__icon {
+      width: 3.9rem;
+      height: 3.9rem;
+    }
+
+    &__text {
+      font-size: 1.7rem;
+      line-height: 1.7rem;
+    }
+
+    &__undertext {
+      font-size: 1.3rem;
+      line-height: 1.7rem;
+    }
   }
 }
