--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,5 +7,6 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/btn";
 @import "components/header";
 @import "components/logo";
